navbar in lg screen not showing links  isuue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -252,7 +252,7 @@ p {
 
 @media (min-width: 1024px) {
   .parallax-container {
-    min-height: 100vh;
+    min-height: 104vh;
   }
 }
 
